update with new ingored files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 root_conversion/.vscode/tasks.json
 root_conversion/.vscode/settings.json
 root_conversion/.vscode/launch.json
+root_conversion/test_data/Singles_.dat
+root_conversion/test_data/test.root
