--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ root_conversion/.vscode/settings.json
 root_conversion/.vscode/launch.json
 root_conversion/test_data/Singles_.dat
 root_conversion/test_data/test.root
+cluster_automation/.vscode/
